@@ -1197,9 +1197,7 @@ stopifnot(identical(a, matrix(character(), 1,2)), is.na(a))
 ## had "" instead of NA in R < 3.5.0
 
 
-
 ## chaining on.exit handlers with return statements
-
 x <- 0
 fret1 <- NULL
 fret2 <- NULL
@@ -1214,6 +1212,16 @@ stopifnot(identical(res, 5))
 stopifnot(identical(x, 2))
 stopifnot(identical(fret1, 4))
 stopifnot(identical(fret2, 5))
+
+
+## splineDesign(*, derivs = <too large>):
+if(no.splines <- !("splines" %in% loadedNamespaces())) requireNamespace("splines")
+x <- (0:8)/8
+aKnots <- c(rep(0, 4), c(0.3, 0.5, 0.6), rep(1, 4))
+tools::assertError(splines::splineDesign(aKnots, x, derivs = 4), verbose = TRUE)
+## gave seg.fault in R <= 3.4.1
+
+
 
 ## keep at end
 rbind(last =  proc.time() - .pt,
